--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <li><a href="plugin.video.tv3alacarta/">plugin.video.tv3alacarta</a></li>
       <li><a href="repository.hirayasoftware/">repository.hirayasoftware</a></li>
       <li><a href="repository.hirayasoftware-1.0.0.zip">repository.hirayasoftware-1.0.0.zip</a></li>
+      <li><a href="addons.xml">addons.xml</a></li>
+      <li><a href="addons.xml.md5">addons.xml.md5</a></li>
     </ul>
   </body>
 </html>
