--- a/repository.hirayasoftware/index.html
+++ b/repository.hirayasoftware/index.html
@@ -2,6 +2,9 @@
   <body>
     <h1>Hiraya Software/repository.hirayasoftware</h1>
     <ul>
+      <li><a href="addon.xml">addon.xml</a></li>
+      <li><a href="fanart.jpg">fanart.jpg</a></li>
+      <li><a href="icon.png">icon.png</a></li>
       <li><a href="repository.hirayasoftware.zip">repository.hirayasoftware.zip</a></li>
     </ul>
   </body>
