--- a/plugin.video.rtve/index.html
+++ b/plugin.video.rtve/index.html
@@ -2,6 +2,9 @@
   <body>
     <h1>Hiraya Software/plugin.video.rtve</h1>
     <ul>
+      <li><a href="addon.xml">addon.xml</a></li>
+      <li><a href="fanart.jpg">fanart.jpg</a></li>
+      <li><a href="icon.png">icon.png</a></li>
       <li><a href="plugin.video.rtve-1.1.0.zip">plugin.video.rtve-1.1.0.zip</a></li>
     </ul>
   </body>
