--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
   <body>
     <h1>Hiraya Software</h1>
     <ul>
+      <li><a href="plugin.audio.onair/">plugin.audio.onair</a></li>
       <li><a href="plugin.video.atresplayer/">plugin.video.atresplayer</a></li>
       <li><a href="plugin.video.eitbalacarta/">plugin.video.eitbalacarta</a></li>
+      <li><a href="plugin.video.foodandtravel/">plugin.video.foodandtravel</a></li>
+      <li><a href="plugin.video.insession/">plugin.video.insession</a></li>
+      <li><a href="plugin.video.magufo/">plugin.video.magufo</a></li>
       <li><a href="plugin.video.mitele/">plugin.video.mitele</a></li>
       <li><a href="plugin.video.noise/">plugin.video.noise</a></li>
       <li><a href="plugin.video.rtve/">plugin.video.rtve</a></li>
       <li><a href="plugin.video.tv3alacarta/">plugin.video.tv3alacarta</a></li>
       <li><a href="repository.hirayasoftware/">repository.hirayasoftware</a></li>
-      <li><a href="repository.hirayasoftware-1.0.1.zip">repository.hirayasoftware-1.0.1.zip</a></li>
       <li><a href="addons.xml">addons.xml</a></li>
       <li><a href="addons.xml.md5">addons.xml.md5</a></li>
+      <li><a href="repository.hirayasoftware-1.0.1.zip">repository.hirayasoftware-1.0.1.zip</a></li>
     </ul>
   </body>
 </html>
