--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,10 @@
 				position: fixed;
 				width: 100%;
 			}
+			p{
+				padding: 5px 15px;
+				font-size: 14px;
+			}
 			h1{
 				text-align: center;
 				padding: 30px 0 20px;
@@ -69,7 +73,17 @@
 
 		<h1 class="main-title">HIRAYA SOFTWARE</h1>
 
-		<h1 style="padding-top: 80px;">Repositorio</h1>
+		<p style="padding-top: 80px;">Bienvenid@s a Hiraya Software</p>
+
+		<p>La fuente y el repositorio para instalar los addons es la siguiente:</p>
+
+		<p><b>https://hirayasoftware.github.io/</b></p>
+
+		<p></p>
+
+		<p>A continuación, dejamos la descripción de todos los Addons, junto a su descarga directa:</p>
+
+		<h1>Repositorio</h1>
 		
 		<div class="addon">
 			<h2>Hiraya Software Repositorio</h2>
