--- a/web/index.html
+++ b/web/index.html
@@ -67,6 +67,17 @@
 				border-radius: 5px;
 				margin-top: 20px;
 			}
+
+			.addon .dep .imagen{
+				display: inline-block;
+				width: 30%;
+			}
+			.addon .dep .texto{
+				display: inline-block;
+				width: 60%;
+				vertical-align: top;
+				padding-top: 10px;
+			}
 		</style>
 	</head>
 	<body>
@@ -82,6 +93,8 @@
 		<p></p>
 
 		<p>A continuación, dejamos la descripción de todos los Addons, junto a su descarga directa:</p>
+
+		<p style="font-style: italic;font-size: 12px">No olvides comprobar también las dependencias, las encontrarás al final de esta página...</p>
 
 		<h1>Repositorio</h1>
 		
@@ -213,6 +226,53 @@
 				Addon que contiene todo el contenido a la carta de los canales de la Televisión Catalana.<br>
 				Programas, series, informativos, deportes y mucho más.
 				<br><a href="https://hirayasoftware.github.io/plugin.video.tv3alacarta/plugin.video.tv3alacarta-1.0.6.zip">DESCARGAR</a>
+			</div>
+		</div>
+
+		<h1>Dependencias</h1>
+
+		<div class="addon">
+			<h2>YouTube</h2>
+			<div class="dep">
+				<div class="imagen">
+					<img src="https://raw.githubusercontent.com/Kolifanes/plugin.video.youtube/master/icon.png" />
+				</div><div class="texto">
+					<p>
+						<b>Necesitado por:</b><br><br>
+						Food & Travel, In Session, Magufo, Noise<br><br>
+						<a href="https://github.com/jdf76/plugin.video.youtube/releases">Descargar</a>
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="addon">
+			<h2>F4MProxy</h2>
+			<div class="dep">
+				<div class="imagen">
+					<img src="https://superrepo.org/static/images/icons/original/xscript.video.F4mProxy.png.pagespeed.ic.jNjXQeLzM_.png" />
+				</div><div class="texto">
+					<p>
+						<b>Necesitado por:</b><br><br>
+						AtresPlayer<br><br>
+						<a href="http://kodikrypton.com/repository/script.video.F4mProxy/">Descargar</a>
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="addon">
+			<h2>F4MTester</h2>
+			<div class="dep">
+				<div class="imagen">
+					<img src="https://superrepo.org/static/images/icons/original/xscript.video.F4mProxy.png.pagespeed.ic.jNjXQeLzM_.png" />
+				</div><div class="texto">
+					<p>
+						<b>Necesitado por:</b><br><br>
+						AtresPlayer<br><br>
+						<a href="https://github.com/devalls/repository/tree/master/plugin.video.f4mTester">Descargar</a>
+					</p>
+				</div>
 			</div>
 		</div>
 
