--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,10 @@
 				padding: 0;
 				font-family: 'Montserrat', sans-serif;
 			}
+			body{
+				max-width: 500px;
+				margin: 0 auto;
+			}
 			.main-title{
 				padding: 10px 0;
 				background-color: black;
@@ -15,6 +19,7 @@
 				font-size: 28px;
 				position: fixed;
 				width: 100%;
+				left: 0;
 			}
 			p{
 				padding: 5px 15px;
