addon canal sur

--- a/web/index.html
+++ b/web/index.html
@@ -140,6 +140,18 @@
 		</div>
 		
 		<div class="addon">
+			<h2>Canal Sur</h2>
+			<div class="imagen">
+				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.canalsur/icon.png" />
+			</div>
+			<div class="desc">
+				Addon con los programas a la carta de Canal Sur.<br>
+				Incluye los canales oficiales de YouTube del canal con miles de videos.
+				<br><a href="https://hirayasoftware.github.io/plugin.video.canalsur/plugin.video.canalsur-1.0.0.zip">DESCARGAR</a>
+			</div>
+		</div>
+		
+		<div class="addon">
 			<h2>EITB</h2>
 			<div class="imagen">
 				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.eitbalacarta/icon.png" />
