--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <ul>
       <li><a href="plugin.audio.onair/">plugin.audio.onair</a></li>
       <li><a href="plugin.video.atresplayer/">plugin.video.atresplayer</a></li>
+      <li><a href="plugin.video.canalsur/">plugin.video.canalsur</a></li>
       <li><a href="plugin.video.eitbalacarta/">plugin.video.eitbalacarta</a></li>
       <li><a href="plugin.video.foodandtravel/">plugin.video.foodandtravel</a></li>
       <li><a href="plugin.video.insession/">plugin.video.insession</a></li>
