addon aragon tv

--- a/web/index.html
+++ b/web/index.html
@@ -128,6 +128,18 @@
 		</div>
 		
 		<div class="addon">
+			<h2>Aragon TV</h2>
+			<div class="imagen">
+				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.aragontv/icon.png" />
+			</div>
+			<div class="desc">
+				Addon con el contenido de Aragon TV a la carta.<br>
+				Todos los programas y canales oficiales de Youtube.
+				<br><a href="https://hirayasoftware.github.io/plugin.video.aragontv/plugin.video.aragontv-1.0.0.zip">DESCARGAR</a>
+			</div>
+		</div>
+		
+		<div class="addon">
 			<h2>AtresPlayer</h2>
 			<div class="imagen">
 				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.atresplayer/icon.png" />
@@ -256,7 +268,7 @@
 				</div><div class="texto">
 					<p>
 						<b>Necesitado por:</b><br><br>
-						Food & Travel, In Session, Magufo, Noise<br><br>
+						Aragon TV, Canal Sur, Food & Travel, In Session, Magufo, Noise<br><br>
 						<a href="https://github.com/jdf76/plugin.video.youtube/releases">Descargar</a>
 					</p>
 				</div>
