--- a/web/index.html
+++ b/web/index.html
@@ -257,6 +257,18 @@
 				<br><a href="https://hirayasoftware.github.io/plugin.video.tv3alacarta/plugin.video.tv3alacarta-1.0.6.zip">DESCARGAR</a>
 			</div>
 		</div>
+		
+		<div class="addon">
+			<h2>TVG</h2>
+			<div class="imagen">
+				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.tvg/icon.png" />
+			</div>
+			<div class="desc">
+				Addon con el contenido de TVG a la carta.<br>
+				Todos los programas y canales oficiales de Youtube.
+				<br><a href="https://hirayasoftware.github.io/plugin.video.tvg/plugin.video.tvg-1.0.0.zip">DESCARGAR</a>
+			</div>
+		</div>
 
 		<h1>Dependencias</h1>
 
