--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="plugin.video.noise/">plugin.video.noise</a></li>
       <li><a href="plugin.video.rtve/">plugin.video.rtve</a></li>
       <li><a href="plugin.video.tv3alacarta/">plugin.video.tv3alacarta</a></li>
+      <li><a href="plugin.video.tvg/">plugin.video.tvg</a></li>
       <li><a href="repository.hirayasoftware/">repository.hirayasoftware</a></li>
       <li><a href="addons.xml">addons.xml</a></li>
       <li><a href="addons.xml.md5">addons.xml.md5</a></li>
