--- a/web/index.html
+++ b/web/index.html
@@ -280,7 +280,7 @@
 				</div><div class="texto">
 					<p>
 						<b>Necesitado por:</b><br><br>
-						Aragon TV, Canal Sur, Food & Travel, In Session, Magufo, Noise<br><br>
+						Aragon TV, Canal Sur, Food & Travel, In Session, Magufo, Noise, TVG<br><br>
 						<a href="https://github.com/jdf76/plugin.video.youtube/releases">Descargar</a>
 					</p>
 				</div>
