--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <h1>Hiraya Software</h1>
     <ul>
       <li><a href="plugin.audio.onair/">plugin.audio.onair</a></li>
+      <li><a href="plugin.video.apunt/">plugin.video.apunt</a></li>
       <li><a href="plugin.video.aragontv/">plugin.video.aragontv</a></li>
       <li><a href="plugin.video.atresplayer/">plugin.video.atresplayer</a></li>
       <li><a href="plugin.video.canalsur/">plugin.video.canalsur</a></li>
