--- a/web/index.html
+++ b/web/index.html
@@ -128,6 +128,17 @@
 		</div>
 		
 		<div class="addon">
+			<h2>À Punt</h2>
+			<div class="imagen">
+				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.audio.apunt/icon.png" />
+			</div>
+			<div class="desc">
+				Addon con la programación a la carta de la televisión autonómica valenciana, incluye canales oficiales de YouTube.
+				<br><a href="https://hirayasoftware.github.io/plugin.audio.apunt/plugin.audio.apunt-1.0.0.zip">DESCARGAR</a>
+			</div>
+		</div>
+		
+		<div class="addon">
 			<h2>Aragon TV</h2>
 			<div class="imagen">
 				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.aragontv/icon.png" />
