--- a/web/index.html
+++ b/web/index.html
@@ -130,11 +130,11 @@
 		<div class="addon">
 			<h2>À Punt</h2>
 			<div class="imagen">
-				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.audio.apunt/icon.png" />
+				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.apunt/icon.png" />
 			</div>
 			<div class="desc">
 				Addon con la programación a la carta de la televisión autonómica valenciana, incluye canales oficiales de YouTube.
-				<br><a href="https://hirayasoftware.github.io/plugin.audio.apunt/plugin.audio.apunt-1.0.0.zip">DESCARGAR</a>
+				<br><a href="https://hirayasoftware.github.io/plugin.video.apunt/plugin.video.apunt-1.0.0.zip">DESCARGAR</a>
 			</div>
 		</div>
 		
