--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <li><a href="plugin.video.aragontv/">plugin.video.aragontv</a></li>
       <li><a href="plugin.video.atresplayer/">plugin.video.atresplayer</a></li>
       <li><a href="plugin.video.canalsur/">plugin.video.canalsur</a></li>
+      <li><a href="plugin.video.dplay/">plugin.video.dplay</a></li>
       <li><a href="plugin.video.eitbalacarta/">plugin.video.eitbalacarta</a></li>
       <li><a href="plugin.video.foodandtravel/">plugin.video.foodandtravel</a></li>
       <li><a href="plugin.video.insession/">plugin.video.insession</a></li>
