--- a/web/index.html
+++ b/web/index.html
@@ -175,6 +175,17 @@
 		</div>
 		
 		<div class="addon">
+			<h2>DPLAY</h2>
+			<div class="imagen">
+				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.dplay/icon.png" />
+			</div>
+			<div class="desc">
+				Addon con los programas a la carta de DMAX y DKISS.
+				<br><a href="https://hirayasoftware.github.io/plugin.video.dplay/plugin.video.dplay-1.0.0.zip">DESCARGAR</a>
+			</div>
+		</div>
+		
+		<div class="addon">
 			<h2>EITB</h2>
 			<div class="imagen">
 				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.eitbalacarta/icon.png" />
@@ -291,7 +302,7 @@
 				</div><div class="texto">
 					<p>
 						<b>Necesitado por:</b><br><br>
-						Aragon TV, Canal Sur, Food & Travel, In Session, Magufo, Noise, TVG<br><br>
+						Aragon TV, Canal Sur, Food & Travel, In Session, Magufo, Noise, TVG, À punt<br><br>
 						<a href="https://github.com/jdf76/plugin.video.youtube/releases">Descargar</a>
 					</p>
 				</div>
