--- a/plugin.video.dplay_dmax_dkiss/index.html
+++ b/plugin.video.dplay_dmax_dkiss/index.html
@@ -1,11 +1,11 @@
 <html>
   <body>
-    <h1>Hiraya Software/plugin.video.dplay</h1>
+    <h1>Hiraya Software/plugin.video.dplay_dmax_dkiss</h1>
     <ul>
       <li><a href="addon.xml">addon.xml</a></li>
       <li><a href="fanart.jpg">fanart.jpg</a></li>
       <li><a href="icon.png">icon.png</a></li>
-      <li><a href="plugin.video.dplay-1.0.0.zip">plugin.video.dplay-1.0.0.zip</a></li>
+      <li><a href="plugin.video.dplay_dmax_dkiss-1.0.0.zip">plugin.video.dplay_dmax_dkiss-1.0.0.zip</a></li>
     </ul>
   </body>
 </html>
