--- a/web/index.html
+++ b/web/index.html
@@ -177,11 +177,11 @@
 		<div class="addon">
 			<h2>DPLAY</h2>
 			<div class="imagen">
-				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.dplay/icon.png" />
+				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.dplay_dmax_dkiss/icon.png" />
 			</div>
 			<div class="desc">
 				Addon con los programas a la carta de DMAX y DKISS.
-				<br><a href="https://hirayasoftware.github.io/plugin.video.dplay/plugin.video.dplay-1.0.0.zip">DESCARGAR</a>
+				<br><a href="https://hirayasoftware.github.io/plugin.video.dplay_dmax_dkiss/plugin.video.dplay_dmax_dkiss-1.0.0.zip">DESCARGAR</a>
 			</div>
 		</div>
 		
