--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="plugin.video.mitele/">plugin.video.mitele</a></li>
       <li><a href="plugin.video.noise/">plugin.video.noise</a></li>
       <li><a href="plugin.video.rtve/">plugin.video.rtve</a></li>
+      <li><a href="plugin.video.telemadrid/">plugin.video.telemadrid</a></li>
       <li><a href="plugin.video.tv3alacarta/">plugin.video.tv3alacarta</a></li>
       <li><a href="plugin.video.tvg/">plugin.video.tvg</a></li>
       <li><a href="repository.hirayasoftware/">repository.hirayasoftware</a></li>
