--- a/web/index.html
+++ b/web/index.html
@@ -269,6 +269,17 @@
 		</div>
 		
 		<div class="addon">
+			<h2>TeleMadrid</h2>
+			<div class="imagen">
+				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.telemadrid/icon.png" />
+			</div>
+			<div class="desc">
+				Addon que contiene todo el contenido a la carta del canal autonómico de Madrid: Telemadrid. Incluye programas de radio.
+				<br><a href="https://hirayasoftware.github.io/plugin.video.telemadrid/plugin.video.telemadrid-1.0.0.zip">DESCARGAR</a>
+			</div>
+		</div>
+		
+		<div class="addon">
 			<h2>TV3</h2>
 			<div class="imagen">
 				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.tv3alacarta/icon.png" />
