--- a/web/index.html
+++ b/web/index.html
@@ -269,6 +269,18 @@
 		</div>
 		
 		<div class="addon">
+			<h2>SUPER 3</h2>
+			<div class="imagen">
+				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.super3/icon.png" />
+			</div>
+			<div class="desc">
+				Addon con el contenido a la carta del Super 3.<br>
+				Series y videos musicales.
+				<br><a href="https://hirayasoftware.github.io/plugin.video.super3/plugin.video.super3-1.0.0.zip">DESCARGAR</a>
+			</div>
+		</div>
+		
+		<div class="addon">
 			<h2>TeleMadrid</h2>
 			<div class="imagen">
 				<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.telemadrid/icon.png" />
