web version nueva

--- a/web/index.html
+++ b/web/index.html
@@ -264,7 +264,7 @@
 				<div class="imagen">
 					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.noise/icon.png" />
 				</div><div class="texto"><p>
-					Addon donde podrás encontrar absolutamente TODOS los álbumes musicales, clasificados por estilo musical.<br>
+					Addon con absolutamente TODOS los álbumes musicales, clasificados por estilo musical.<br>
 					Podrás buscar cualquier álbum por el título, por el grupo o artista, estilo, filtrar por un año...<br>
 					También contiene una sección donde puedes crear tus listas y añadir tus temas favoritos a ellas, y otra sección para guardar tus álbumes favoritos.<br>
 					Además incluye la posibilidad de descargar cualquier tema o álbum completo en mp3.
