--- a/web/addons.html
+++ b/web/addons.html
@@ -237,6 +237,18 @@
 		</div>
 		
 		<div class="addon">
+			<h2>MTMAD</h2>
+			<div class="dep">
+				<div class="imagen">
+					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.mtmad/icon.png" />
+				</div><div class="texto"><p>
+					Addon que contiene todo el contenido a la carta de los programas de MTMAD.
+					<br><br><a href="https://hirayasoftware.github.io/plugin.video.mtmad/plugin.video.mtmad-1.0.0.zip">DESCARGAR</a>
+				</p></div>
+			</div>
+		</div>
+		
+		<div class="addon">
 			<h2>Noise</h2>
 			<div class="dep">
 				<div class="imagen">
