mtmad index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="plugin.video.insession/">plugin.video.insession</a></li>
       <li><a href="plugin.video.magufo/">plugin.video.magufo</a></li>
       <li><a href="plugin.video.mitele/">plugin.video.mitele</a></li>
+      <li><a href="plugin.video.mtmad/">plugin.video.mtmad</a></li>
       <li><a href="plugin.video.noise/">plugin.video.noise</a></li>
       <li><a href="plugin.video.rtve/">plugin.video.rtve</a></li>
       <li><a href="plugin.video.super3/">plugin.video.super3</a></li>
