--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <h1>Hiraya Software</h1>
     <ul>
+      <li><a href="Kodi Global Info/">Kodi Global Info</a></li>
       <li><a href="plugin.audio.onair/">plugin.audio.onair</a></li>
       <li><a href="plugin.video.apunt/">plugin.video.apunt</a></li>
       <li><a href="plugin.video.aragontv/">plugin.video.aragontv</a></li>
