--- a/Kodi_Global_Info/index.html
+++ b/Kodi_Global_Info/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>Hiraya Software/Kodi Global Info</h1>
+    <h1>Hiraya Software/Kodi_Global_Info</h1>
     <ul>
       <li><a href="plugin.program.KGI-0.0.3.zip">plugin.program.KGI-0.0.3.zip</a></li>
     </ul>
