--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="plugin.video.dplay_dmax_dkiss/">plugin.video.dplay_dmax_dkiss</a></li>
       <li><a href="plugin.video.eitbalacarta/">plugin.video.eitbalacarta</a></li>
       <li><a href="plugin.video.foodandtravel/">plugin.video.foodandtravel</a></li>
+      <li><a href="plugin.video.informerobinson/">plugin.video.informerobinson</a></li>
       <li><a href="plugin.video.insession/">plugin.video.insession</a></li>
       <li><a href="plugin.video.magufo/">plugin.video.magufo</a></li>
       <li><a href="plugin.video.mitele/">plugin.video.mitele</a></li>
