--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <li><a href="plugin.video.apunt/">plugin.video.apunt</a></li>
       <li><a href="plugin.video.aragontv/">plugin.video.aragontv</a></li>
       <li><a href="plugin.video.atresplayer/">plugin.video.atresplayer</a></li>
+      <li><a href="plugin.video.backtothefutbol/">plugin.video.backtothefutbol</a></li>
       <li><a href="plugin.video.canalsur/">plugin.video.canalsur</a></li>
       <li><a href="plugin.video.dplay_dmax_dkiss/">plugin.video.dplay_dmax_dkiss</a></li>
       <li><a href="plugin.video.eitbalacarta/">plugin.video.eitbalacarta</a></li>
