--- a/web/addons.html
+++ b/web/addons.html
@@ -150,6 +150,19 @@
 		</div>
 		
 		<div class="addon">
+			<h2>Back To The Futbol</h2>
+			<div class="dep">
+				<div class="imagen">
+					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.backtothefutbol/icon.png" />
+				</div><div class="texto"><p>
+					Addon con miles de partidos de futbol repetidos.<br>
+					LaLiga, Champions, Europa League, Premier League, BundesLiga, Ligue 1, Copa del Rey... y cualquier competición que te imagines de todo el futbol mundial!
+					<br><br><a href="https://hirayasoftware.github.io/plugin.video.backtothefutbol/plugin.video.backtothefutbol-1.0.1.zip">DESCARGAR</a>
+				</p></div>
+			</div>
+		</div>
+		
+		<div class="addon">
 			<h2>Canal Sur</h2>
 			<div class="dep">
 				<div class="imagen">
