--- a/web/faq.html
+++ b/web/faq.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>jQuery UI Accordion - Default functionality</title>
+    <title>Hiraya Software - FAQ</title>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -31,6 +31,7 @@
         position: fixed;
         width: 100%;
         left: 0;
+        z-index: 9999;
       }
       p{
         padding: 5px 15px;
