--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <h1>Hiraya Software</h1>
     <ul>
       <li><a href="Kodi_Global_Info/">Kodi_Global_Info</a></li>
+      <li><a href="dependencias/">dependencias</a></li>
       <li><a href="plugin.audio.onair/">plugin.audio.onair</a></li>
       <li><a href="plugin.video.apunt/">plugin.video.apunt</a></li>
       <li><a href="plugin.video.aragontv/">plugin.video.aragontv</a></li>
