--- a/plugin.video.patanegrafordev/index.html
+++ b/plugin.video.patanegrafordev/index.html
@@ -5,7 +5,7 @@
       <li><a href="addon.xml">addon.xml</a></li>
       <li><a href="fanart.jpg">fanart.jpg</a></li>
       <li><a href="icon.png">icon.png</a></li>
-      <li><a href="test.zip">plugin.video.patanegrafordev-1.0.0.zip</a></li>
+      <li><a href="plugin.video.patanegrafordev-1.0.0.zip">plugin.video.patanegrafordev-1.0.0.zip</a></li>
     </ul>
   </body>
 </html>
