--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li><a href="plugin.video.mitele/">plugin.video.mitele</a></li>
       <li><a href="plugin.video.mtmad/">plugin.video.mtmad</a></li>
       <li><a href="plugin.video.noise/">plugin.video.noise</a></li>
+      <li><a href="plugin.video.patanegra/">plugin.video.patanegra</a></li>
       <li><a href="plugin.video.rtve/">plugin.video.rtve</a></li>
       <li><a href="plugin.video.super3/">plugin.video.super3</a></li>
       <li><a href="plugin.video.telemadrid/">plugin.video.telemadrid</a></li>
