--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="plugin.video.telemadrid/">plugin.video.telemadrid</a></li>
       <li><a href="plugin.video.tv3alacarta/">plugin.video.tv3alacarta</a></li>
       <li><a href="plugin.video.tvg/">plugin.video.tvg</a></li>
+      <li><a href="plugin.video.viewtests/">plugin.video.viewtests</a></li>
       <li><a href="repository.hirayasoftware/">repository.hirayasoftware</a></li>
       <li><a href="addons.xml">addons.xml</a></li>
       <li><a href="addons.xml.md5">addons.xml.md5</a></li>
