--- a/web/addons.html
+++ b/web/addons.html
@@ -144,7 +144,7 @@
 				</div><div class="texto"><p>
 					Addon con el contenido de AtresMedia a la carta.<br>
 					Programas, series, telenovelas, películas y mucho más.
-					<br><br><a href="https://hirayasoftware.github.io/plugin.video.atresplayer/plugin.video.atresplayer-1.3.0.zip">DESCARGAR</a>
+					<br><br><a href="https://hirayasoftware.github.io/plugin.video.atresplayer/plugin.video.atresplayer-1.3.1.zip">DESCARGAR</a>
 				</p></div>
 			</div>
 		</div>
@@ -272,6 +272,20 @@
 					También contiene una sección donde puedes crear tus listas y añadir tus temas favoritos a ellas, y otra sección para guardar tus álbumes favoritos.<br>
 					Además incluye la posibilidad de descargar cualquier tema o álbum completo en mp3.
 					<br><br><a href="https://hirayasoftware.github.io/plugin.video.noise/plugin.video.noise-1.0.5.zip">DESCARGAR</a>
+				</p></div>
+			</div>
+		</div>
+		
+		<div class="addon">
+			<h2>Pata Negra</h2>
+			<div class="dep">
+				<div class="imagen">
+					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.patanegra/icon.png" />
+				</div><div class="texto"><p>
+					Nuestro addon de cine, donde podrás encontrar casi cualquier película, actual o no, incluye todas las calidades, incluido 4K en muchas películas.<br>
+					Busca enlaces en mas de 20 webs distintas.<br>
+					SOLO CONTENIDO EN CASTELLANO!
+					<br><br><a href="https://hirayasoftware.github.io/plugin.video.patanegra/plugin.video.patanegra-1.0.4.zip">DESCARGAR</a>
 				</p></div>
 			</div>
 		</div>
