--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <li><a href="plugin.video.atresplayer/">plugin.video.atresplayer</a></li>
       <li><a href="plugin.video.backtothefutbol/">plugin.video.backtothefutbol</a></li>
       <li><a href="plugin.video.canalsur/">plugin.video.canalsur</a></li>
+      <li><a href="plugin.video.cmmedia/">plugin.video.cmmedia</a></li>
       <li><a href="plugin.video.dplay_dmax_dkiss/">plugin.video.dplay_dmax_dkiss</a></li>
       <li><a href="plugin.video.eitbalacarta/">plugin.video.eitbalacarta</a></li>
       <li><a href="plugin.video.foodandtravel/">plugin.video.foodandtravel</a></li>
