--- a/web/addons.html
+++ b/web/addons.html
@@ -176,6 +176,18 @@
 		</div>
 		
 		<div class="addon">
+			<h2>CMM</h2>
+			<div class="dep">
+				<div class="imagen">
+					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.cmmedia/icon.png" />
+				</div><div class="texto"><p>
+					Addon con los programas a la carta de CMM.
+					<br><br><a href="https://hirayasoftware.github.io/plugin.video.cmmedia/plugin.video.cmmedia-1.0.0.zip">DESCARGAR</a>
+				</p></div>
+			</div>
+		</div>
+		
+		<div class="addon">
 			<h2>DPLAY</h2>
 			<div class="dep">
 				<div class="imagen">
@@ -290,6 +302,18 @@
 			</div>
 		</div>
 		
+		<div class="addon">
+			<h2>RTPA</h2>
+			<div class="dep">
+				<div class="imagen">
+					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.rtpa/icon.png" />
+				</div><div class="texto"><p>
+					Addon que contiene todo el contenido a la carta de RTPA.
+					<br><br><a href="https://hirayasoftware.github.io/plugin.video.rtpa/plugin.video.rtpa-1.0.0.zip">DESCARGAR</a>
+				</p></div>
+			</div>
+		</div>
+
 		<div class="addon">
 			<h2>RTVE</h2>
 			<div class="dep">
