--- a/dependencias/index.html
+++ b/dependencias/index.html
@@ -3,6 +3,7 @@
     <h1>Hiraya Software/dependencias</h1>
     <ul>
       <li><a href="plugin.video.f4mTester-2.7.2.zip">plugin.video.f4mTester-2.7.2.zip</a></li>
+      <li><a href="plugin.video.youtube-6.8.3.zip">plugin.video.youtube-6.8.3.zip</a></li>
       <li><a href="script.module.resolveurl-5.0.41.zip">script.module.resolveurl-5.0.41.zip</a></li>
       <li><a href="script.module.urlresolver-5.0.61.zip">script.module.urlresolver-5.0.61.zip</a></li>
       <li><a href="script.video.F4mProxy-2.8.8.zip">script.video.F4mProxy-2.8.8.zip</a></li>
