--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <li><a href="plugin.video.atresplayer/">plugin.video.atresplayer</a></li>
       <li><a href="plugin.video.backtothefutbol/">plugin.video.backtothefutbol</a></li>
       <li><a href="plugin.video.canalsur/">plugin.video.canalsur</a></li>
+      <li><a href="plugin.video.clan/">plugin.video.clan</a></li>
       <li><a href="plugin.video.cmmedia/">plugin.video.cmmedia</a></li>
       <li><a href="plugin.video.dplay_dmax_dkiss/">plugin.video.dplay_dmax_dkiss</a></li>
       <li><a href="plugin.video.eitbalacarta/">plugin.video.eitbalacarta</a></li>
@@ -27,7 +28,6 @@
       <li><a href="plugin.video.telemadrid/">plugin.video.telemadrid</a></li>
       <li><a href="plugin.video.tv3alacarta/">plugin.video.tv3alacarta</a></li>
       <li><a href="plugin.video.tvg/">plugin.video.tvg</a></li>
-      <li><a href="plugin.video.viewtests/">plugin.video.viewtests</a></li>
       <li><a href="repository.hirayasoftware/">repository.hirayasoftware</a></li>
       <li><a href="addons.xml">addons.xml</a></li>
       <li><a href="addons.xml.md5">addons.xml.md5</a></li>
