--- a/web/addons.html
+++ b/web/addons.html
@@ -188,6 +188,18 @@
 		</div>
 		
 		<div class="addon">
+			<h2>CLAN</h2>
+			<div class="dep">
+				<div class="imagen">
+					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.clan/icon.gif" />
+				</div><div class="texto"><p>
+					Addon con los programas a la carta de CLAN.
+					<br><br><a href="https://hirayasoftware.github.io/plugin.video.clan/plugin.video.clan-1.0.0.zip">DESCARGAR</a>
+				</p></div>
+			</div>
+		</div>
+		
+		<div class="addon">
 			<h2>DPLAY</h2>
 			<div class="dep">
 				<div class="imagen">
