--- a/web/addons.html
+++ b/web/addons.html
@@ -267,8 +267,8 @@
 					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.mitele/icon.png" />
 				</div><div class="texto"><p>
 					Addon que contiene todo el contenido a la carta de los canales del grupo MediaSet.<br>
-					Programas, series, informativos, deportes, películas y mucho más.
-					<br><br><a href="https://hirayasoftware.github.io/plugin.video.mitele/plugin.video.mitele-1.1.7.zip">DESCARGAR</a>
+					Programas, series, informativos, deportes y mucho más.
+					<br><br><a href="https://hirayasoftware.github.io/plugin.video.mitele/plugin.video.mitele-1.1.8.zip">DESCARGAR</a>
 				</p></div>
 			</div>
 		</div>
