index general dplus 100

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li><a href="plugin.video.canalsur/">plugin.video.canalsur</a></li>
       <li><a href="plugin.video.clan/">plugin.video.clan</a></li>
       <li><a href="plugin.video.cmmedia/">plugin.video.cmmedia</a></li>
-      <li><a href="plugin.video.dplay_dmax_dkiss/">plugin.video.dplay_dmax_dkiss</a></li>
+      <li><a href="plugin.video.discoveryplus/">plugin.video.discoveryplus</a></li>
       <li><a href="plugin.video.eitbalacarta/">plugin.video.eitbalacarta</a></li>
       <li><a href="plugin.video.foodandtravel/">plugin.video.foodandtravel</a></li>
       <li><a href="plugin.video.informerobinson/">plugin.video.informerobinson</a></li>
