--- a/web/addons.html
+++ b/web/addons.html
@@ -200,13 +200,13 @@
 		</div>
 		
 		<div class="addon">
-			<h2>DPLAY</h2>
+			<h2>DISCOVERY PLUS</h2>
 			<div class="dep">
 				<div class="imagen">
-					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.dplay_dmax_dkiss/icon.png" />
+					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.discoveryplus/icon.png" />
 				</div><div class="texto"><p>
 					Addon con los programas a la carta de DMAX y DKISS.
-					<br><br><a href="https://hirayasoftware.github.io/plugin.video.dplay_dmax_dkiss/plugin.video.dplay_dmax_dkiss-1.1.7.zip">DESCARGAR</a>
+					<br><br><a href="https://hirayasoftware.github.io/plugin.video.discoveryplus/plugin.video.discoveryplus-3.0.0.zip">DESCARGAR</a>
 				</p></div>
 			</div>
 		</div>
@@ -280,7 +280,7 @@
 					<img src="https://raw.githubusercontent.com/hirayasoftware/hirayasoftware.github.io/master/plugin.video.mtmad/icon.png" />
 				</div><div class="texto"><p>
 					Addon que contiene todo el contenido a la carta de los programas de MTMAD.
-					<br><br><a href="https://hirayasoftware.github.io/plugin.video.mtmad/plugin.video.mtmad-1.0.2.zip">DESCARGAR</a>
+					<br><br><a href="https://hirayasoftware.github.io/plugin.video.mtmad/plugin.video.mtmad-1.0.3.zip">DESCARGAR</a>
 				</p></div>
 			</div>
 		</div>
